# FlowCV_OpenVino

./: CMakeLists.txt  README.md
CMake/: OpenVino_Config.cmake
Plugins/Common/: one_euro_filter.cpp  one_euro_filter.hpp
Plugins/Head_Face_Emotion/: CMakeLists.txt  head_face_emotion.cpp  head_face_emotion.hpp
Plugins/Pose_Estimation_2D/: CMakeLists.txt  pose_estimation_2d.cpp  pose_estimation_2d.hpp
